--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
-*.egg-info
-.DS_Store
-build
-dist
-docs/.ipynb_checkpoints
-docs/_build
-docs/_autosummary
-docs/*.zarr
-__pycache__
+_site
+.sass-cache
+.jekyll-cache
+.jekyll-metadata
+vendor
