--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -47,4 +47,4 @@ jobs:
     - name: Run scripts tests
       # The scripts define some of the same flags, so we run pytest in separate processes.
       run: |
-        pytest scripts/
+        for test in scripts/*_test.py; do pytest $test; done
