--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -16,7 +16,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        # TODO(#3): Support Python 3.10 and 3.11.
+        python-version: ["3.9"]
     steps:
     - name: Cancel previous
       uses: styfle/cancel-workflow-action@0.7.0
