Revert "Fixed broken CI (#2)"
This reverts commit d95e47eeff57021f53a9395a16f1def47dd55668.

--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -16,8 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # TODO(#3): Support Python 3.10 and 3.11.
-        python-version: ["3.9"]
+        python-version: ["3.9", "3.10", "3.11"]
     steps:
     - name: Cancel previous
       uses: styfle/cancel-workflow-action@0.7.0
@@ -48,4 +47,4 @@ jobs:
     - name: Run scripts tests
       # The scripts define some of the same flags, so we run pytest in separate processes.
       run: |
-        for test in scripts/*_test.py; do pytest $test; done
+        pytest scripts/
