Adding Pyink to the CI.
In addition, I've applied Pyink on all sources.

--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -39,6 +39,9 @@ jobs:
       with:
         path: ${{ steps.pip-cache.outputs.dir }}
         key: ${{ runner.os }}-pip-${{ hashFiles('**/setup.py') }}
+    - name: Lint with pyink
+      run: |
+        pyink --check .
     - name: Install Weatherbench2
       run: |
         pip install -e .[tests]
