--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Lint
 
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
@@ -42,10 +42,7 @@ jobs:
     - name: Install Weatherbench 2
       run: |
         pip install -e .[tests]
-    - name: Run unit tests
+    - name: Lint with pyink and isort
       run: |
-        pytest weatherbench2
-    - name: Run scripts tests
-      # The scripts define some of the same flags, so we run pytest in separate processes.
-      run: |
-        for test in scripts/*_test.py; do pytest $test; done
+        pyink --check .
+        isort --check .
