[weatherbench2] add Xarray-Beam job for regridding.
PiperOrigin-RevId: 553819268

--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    name: "python ${{ matrix.python-version }}"
+    name: "python ${{ matrix.python-version }} tests"
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
