--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ dist
 docs/.ipynb_checkpoints
 docs/_build
 docs/source/_autosummary
+docs/source/.ipynb_checkpoints
 docs/*.zarr
 __pycache__
 .pytest_cache
