Removing isort lint check.
Almost working is way worse than not working at all. Specifically, we get conflicts between internal and external sorting rules. Better to just get rid of this.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -42,7 +42,6 @@ jobs:
     - name: Install Weatherbench 2
       run: |
         pip install -e .[tests]
-    - name: Lint with pyink and isort
+    - name: Lint with pyink
       run: |
         pyink --check .
-        isort --check .
