Add vertical velocity as a derived variable.
Also includes two fixes for divergence & voricity:

1. Units should to be `1/s`, not `m/s/degree`.
2. Horizontal derivatives shouldn't be weighted by `cos(latitude)`

The calculation of vertical wind is quite close to ERA5, except in regions where a pressure level is below the surface of the Earth (e.g., Tibet).

ERA5:
![image](https://github.com/google-research/weatherbench2/assets/1217238/4fb01902-3c5c-4275-82e7-6089acd9ec63)

Computed from 37 pressure levels:
![image](https://github.com/google-research/weatherbench2/assets/1217238/2e1acacb-4b49-43ae-b2d8-6164a4f97f76)

PiperOrigin-RevId: 570243366

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -44,4 +44,4 @@ jobs:
         pip install -e .[tests]
     - name: Lint with pyink
       run: |
-        pyink --check .
+        pyink --check --diff --color .
